fix: Card styling
* Buttons changing colors when clicked
* Buttons color matches Vue 2 era
* ItemMenu button being too large
* Overlay not reaching to the edges
* Unreadable buttons when changing themes
* Carousel's progress bar following theme
* Factorize Card classes so overlay contains all the elements that are above the image: this way, when hovered, the watcher indicator and progress bars are not darkened
* Use absolute-cover to reduce style declaration

--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -85,9 +85,3 @@ html.no-forced-scrollbar {
 .overflow-hidden {
   overflow: hidden;
 }
-
-.card-chip {
-  position: absolute;
-  top: 1em;
-  right: 1em;
-}
